2005-04-22  Florian Boor <florian@kernelconcepts.de>

	* Released Version 0.100
	* Makefile.am: Some cleanup.
	* configure.ac: Version to 0.100
	* doc/gtk-doc.make: New file providing improved gtk-doc support. 
	                    It was necessary to modify this file a little bit to 
						make distcheck work.
	* doc/Makefile.am: Change to a documentation Makefile.am from template.
	                   The friendly message is still there!
	* doc/.cvsignore: Add some more files to ignore.
	* doc/tmpl/*sgml: Some updates in generated sections.

2005-04-20  Florian Boor <florian@kernelconcepts.de>
	
	* Makefile.am: Add missing gpehelp.h

2005-04-20  Phil Blundell  <pb@mebius.nexus.co.uk>

	* doc/Makefile.am (doc): Don't raise an error if gtk-doc is missing.

2005-04-19  Phil Blundell  <pb@mebius.nexus.co.uk>

	* doc/Makefile.am (doc): Add friendly message when trying to build
	documentation without gtk-doc.

2005-04-19  Phil Blundell  <pb@mebius.nexus.co.uk>

	* configure.ac: Set version to 0.99

2005-04-19  Phil Blundell  <pb@mebius.nexus.co.uk>

	* configure.ac: Require cairo >= 0.4.0.

	* Makefile.am (INCLUDE): Add -Wall.

	* gpeclockface.c: Include strlen.h and cairo-xlib.h to fix
	warnings.
	(draw_hand): Replace cairo_set_alpha/cairo_set_rgb_color with
	cairo_set_source_rgba.
	(gpe_clock_face_expose): Likewise.

2005-04-19  Phil Blundell  <pb@reciva.com>

	Add auto-linguas support:
	* gpe-tp.am: New files.
	* Makefile.am: Include it.
	* tp/po-extract-linguas, tp/po-wget-last: New files.

2005-04-14  Florian Boor <florian@kernelconcepts.de>

	* libgpewidget-uninstalled.pc.in: Fixed path to library.
	* configure.ac, libgpewidget-uninstalled.pc.in: Add and update
          generating libgpewidget-uninstalled.pc.
	* doc/.cvsignore: New file.

2005-04-14  Florian Boor <florian@kernelconcepts.de>

	* Introducing autotools...
	* configure.ac: Update version to 0.98

2005-04-08  Florian Boor <florian@kernelconcepts.de>
